Zavrseno odbijanje i odobravanje kom., kretanje po stranicama i prikaz

--- a/AgentAppFront/src/app/components/userComponent/dijalog-info-korisnika/dijalog-info-korisnika.component.html
+++ b/AgentAppFront/src/app/components/userComponent/dijalog-info-korisnika/dijalog-info-korisnika.component.html
@@ -40,7 +40,7 @@
                         <br>
                         <br>
 
-                        <button mat-button class="bojaButton" (click)="cancel()">Odustani</button>
+                        <button mat-button class="bojaButton" (click)="cancel()">Zatvori</button>
 
                 </mat-card-content>
                
