--- a/AgentAppFront/src/app/components/userComponent/administrator/administrator.component.html
+++ b/AgentAppFront/src/app/components/userComponent/administrator/administrator.component.html
@@ -39,6 +39,12 @@
       <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaVrstaMenjacaVozila">Lista Vrste Menjaca</a>
 
       <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaKomentaraAdmina">Lista Pristiglih Komentara Korisnika</a>
+
+      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaOdbobrenihKomentaraAdmina">Lista Odobrenih Komentara Korisnika</a>
+
+      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaOdbijenihKomentaraAdmina">Lista Odbijenih Komentara Korisnika</a>
+
+
     </mat-menu>
 
 
