--- a/AgentAppFront/src/app/components/userComponent/model-vozila/prikaz-modela-vozila/prikaz-modela-vozila.component.html
+++ b/AgentAppFront/src/app/components/userComponent/model-vozila/prikaz-modela-vozila/prikaz-modela-vozila.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary" class="app-header">
     <div><a href="/" class="navlogo">Rent-A-Car</a></div>
     <span class="nav-tool-items">
+      <a mat-button mat-raised-button routerLink="/administrator" routerLinkActive="active">Vrati se korak nazad</a>
     </span>
   </mat-toolbar>
   <br><br>
