--- a/AgentAppFront/src/app/components/userComponent/user/user.component.html
+++ b/AgentAppFront/src/app/components/userComponent/user/user.component.html
@@ -75,6 +75,10 @@
                 <button mat-raised-button color="primary" style="border-radius: 10px;" (click)="openDialog(oglas)">Dodaj komentar</button>
               </mat-grid-tile>
 
+              <mat-grid-tile [colspan]="5" [rowspan]="1">
+                <button mat-raised-button color="primary" style="border-radius: 10px;" (click)="openDialogPrikazKomentara(oglas)">Prikaz komentara oglasa</button>
+              </mat-grid-tile>
+
             </mat-grid-list>
           </mat-card-actions>
         </mat-card>
