Poruke, vozilo, oglas kod agenta

--- a/AgentAppFront/src/app/components/novo-vozilo/novo-vozilo.component.html
+++ b/AgentAppFront/src/app/components/novo-vozilo/novo-vozilo.component.html
@@ -1,10 +1,9 @@
-<p>novo-vozilo works!</p>
 <mat-toolbar color="primary" class="app-header">
     <div><a href="/" class="navlogo">Rent-A-Car Korisnik</a></div>
     <span class="nav-tool-items">
-        <a mat-button mat-raised-button routerLink="/novoVozilo" routerLinkActive="active" (click)="novo()">Novo vozilo</a>
+        <!--<a mat-button mat-raised-button routerLink="/novoVozilo" routerLinkActive="active" (click)="novo()">Novo vozilo</a>
         <a mat-button mat-raised-button routerLink="/cart" routerLinkActive="active" (click)="shopCart()">Shopping Cart</a>
-        <a mat-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
+        --><a mat-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
       </span>
   </mat-toolbar>  
 
