--- a/AgentAppFront/src/app/components/userComponent/agent/agent.component.html
+++ b/AgentAppFront/src/app/components/userComponent/agent/agent.component.html
@@ -3,8 +3,13 @@
     <span class="nav-tool-items">
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onUnesiIzvestaj()">Unesi Izvestaj</a>
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onZahtevi()">Zahtevi</a>
+      <a mat-button mat-raised-button routerLink="/posalji" routerLinkActive="active" (click)="prihvaceni()">Prihvaceni</a>
+      <a mat-button mat-raised-button routerLink="/zahteviMess" routerLinkActive="active" (click)="zahteviMess()">Poruke</a>
+      <a mat-button mat-raised-button routerLink="/novoVozilo" routerLinkActive="active" (click)="novo()">Novo vozilo</a>
+      <a mat-button mat-raised-button routerLink="/svaVozila" routerLinkActive="active" (click)="sva()">Novi oglas</a>
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onMojaVozila()">Moja Vozila</a>
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
+   
     </span>
   </mat-toolbar>  
 
