ocenjivanje od strane usera
ocenjivanje od strane usera

--- a/ServisiFront/src/app/components/userComponent/user/vozilo-details/vozilo-details.component.html
+++ b/ServisiFront/src/app/components/userComponent/user/vozilo-details/vozilo-details.component.html
@@ -16,7 +16,7 @@
 
                 <mat-form-field class="full-width">
                     <mat-label>Vlasnik</mat-label>
-                    <input [(ngModel)]="oglas.vozilo.user.firstname" matInput [ngModelOptions]="{standalone: true}" required disabled>
+                    <input [(ngModel)]="oglas.vozilo.user.username" matInput [ngModelOptions]="{standalone: true}" required disabled>
                 </mat-form-field>
 
                 <mat-form-field class="full-width">
