--- a/ServisiFront/src/app/components/userComponent/user/user.component.html
+++ b/ServisiFront/src/app/components/userComponent/user/user.component.html
@@ -9,6 +9,7 @@
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onVozilo()">Novo vozilo</a>
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onMojaVozila()">Moja vozila</a>
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onShoppingCart()">Moja Korpa</a>
+      <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onIznajmljenaVozila()">Moji Zahtevi</a>
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
     </span>
   </mat-toolbar>  
@@ -32,7 +33,7 @@
               {{oglas.markaVozila}} {{oglas.modelVozila}} {{oglas.klasaVozila}}
             </mat-card-title>
             <mat-card-subtitle>
-              autor: {{oglas.userfirstname}}
+              <!-- autor: {{getUsername(oglas.author)}} -->
             </mat-card-subtitle>
           </mat-card-header>
           <mat-card-content>
