--- a/ServisiFront/src/styles.css
+++ b/ServisiFront/src/styles.css
@@ -1,4 +1,5 @@
 @import "~ng-pick-datetime/assets/style/picker.min.css";
+@import "~css-star-rating/css/star-rating"; 
 .container {display:flex;flex-basis: column;min-width: 400px;}
 html,body{height:100%;margin:0;padding:0;}
 body{background-position:center;background-size:cover;background-repeat:no-repeat;min-height:100vh;font-family:'Roboto', sans-serif;}
