--- a/AgentAppFront/src/app/components/userComponent/user/user.component.html
+++ b/AgentAppFront/src/app/components/userComponent/user/user.component.html
@@ -78,7 +78,7 @@
               </mat-grid-tile>
 
               <mat-grid-tile [colspan]="5" [rowspan]="1">
-                <button mat-raised-button color="primary" style="border-radius: 10px;" (click)="openDialogPrikazKomentara(oglas)">Prikaz komentara oglasa</button>
+                <button mat-raised-button color="primary" style="border-radius: 10px;" (click)="openDialogPrikazKomentara(oglas)">Komentari</button>
               </mat-grid-tile>
 
             </mat-grid-list>
