--- a/ServisiFront/src/app/components/userComponent/administrator/administrator.component.html
+++ b/ServisiFront/src/app/components/userComponent/administrator/administrator.component.html
@@ -18,19 +18,30 @@
       </mat-menu>
 
 
-      <button class="dugmeLista"  mat-button [matMenuTriggerFor]="menu2">Lista entiteta</button>
-      <mat-menu #menu2="matMenu">
-        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaMarkiVozila">Lista Marke Vozila</a>
       
-        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaKlasaVozila">Lista Klase Vozila</a>
-        
-        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaModelaVozila">Lista Modela Vozila</a>
-  
-        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaTipaGorivaVozila">Lista Tipa Goriva</a>
-  
-        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaVrstaMenjacaVozila">Lista Vrste Menjaca</a>
-      </mat-menu>
+    <button class="dugmeLista"  mat-button [matMenuTriggerFor]="menu2">
+      <mat-icon>expand_more</mat-icon>
+      Liste
+    </button>
+    <mat-menu #menu2="matMenu">
+      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaMarkiVozila">Lista Marke Vozila</a>
+    
+      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaKlasaVozila">Lista Klase Vozila</a>
+      
+      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaModelaVozila">Lista Modela Vozila</a>
 
+      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaTipaGorivaVozila">Lista Tipa Goriva</a>
+
+      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaVrstaMenjacaVozila">Lista Vrste Menjaca</a>
+
+      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaKomentaraAdmina">Lista Pristiglih Komentara Korisnika</a>
+
+      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaOdbobrenihKomentaraAdmina">Lista Odobrenih Komentara Korisnika</a>
+
+      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaOdbijenihKomentaraAdmina">Lista Odbijenih Komentara Korisnika</a>
+
+
+    </mat-menu>
 
 
 
