--- a/ServisiFront/src/app/components/userComponent/marka-vozila/marka-vozila.component.html
+++ b/ServisiFront/src/app/components/userComponent/marka-vozila/marka-vozila.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar color="primary" class="app-header">
   <div><a href="/" class="navlogo">Rent-A-Car</a></div>
-
+  <span class="nav-tool-items">
+    <a mat-button mat-raised-button routerLink="/administrator" routerLinkActive="active">Vrati se korak nazad</a>
+  </span>
 </mat-toolbar>
 
   <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
