--- a/ServisiFront/src/app/components/userComponent/agent/agent.component.html
+++ b/ServisiFront/src/app/components/userComponent/agent/agent.component.html
@@ -3,7 +3,9 @@
     <span class="nav-tool-items">
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onUnesiIzvestaj()">Unesi Izvestaj</a>
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onZahtevi()">Zahtevi</a>
-      <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onMojaVozila()">Moja Vozila</a>
+      <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onVozilo()">Novo vozilo</a>
+      <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOglas()">Novi oglas</a>
+      <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onMojaVozila()">Moja vozila</a>
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
     </span>
   </mat-toolbar>  
