--- a/ServisiFront/src/app/components/login/login.component.css
+++ b/ServisiFront/src/app/components/login/login.component.css
@@ -5,8 +5,7 @@
   flex: 1 1 auto;
 }    
 .example-card {
-  border: 1px solid #b8b8b8;
-  border-radius: 6px;
+  background-color: rgb(148, 199, 231);
   max-width: 500px;
   width: 80%;
   margin: 40px;
