--- a/ServisiFront/src/app/components/userComponent/agent/izvestaj/izvestaj.component.html
+++ b/ServisiFront/src/app/components/userComponent/agent/izvestaj/izvestaj.component.html
@@ -1,13 +1,15 @@
 <mat-toolbar color="primary" class="app-header">
     <div><a href="/agent" class="navlogo">Rent-A-Car Agent</a></div>
     <span class="nav-tool-items">
-      <a mat-button mat-raised-button routerLink="/agent/izvestaj" routerLinkActive="active" >Unesi Izvestaj</a>
-      <a mat-button mat-raised-button routerLink="/agent/zahtev" routerLinkActive="active" >Zahtevi</a>
-      <a mat-button mat-raised-button routerLink="/agent/vozila" routerLinkActive="active">Moja Vozila</a>
-      <a mat-button mat-raised-button routerLink="/agent/statistika" routerLinkActive="active">statistika</a>
-      <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
+        <a mat-button mat-raised-button routerLink="/agent/izvestaj" routerLinkActive="active">Unesi Izvestaj</a>
+        <a mat-button mat-raised-button routerLink="/agent/zahtev" routerLinkActive="active">Zahtevi</a>
+        <a mat-button mat-raised-button routerLink="/vozilo/novoVozilo" routerLinkActive="active" >Novo vozilo</a>
+        <a mat-button mat-raised-button routerLink="/agent/oglas" routerLinkActive="active" >Novi oglas</a>
+        <a mat-button mat-raised-button routerLink="/agent/vozila" routerLinkActive="active">Moja Vozila</a>
+        <a mat-button mat-raised-button routerLink="/agent/statistika" routerLinkActive="active">statistika</a>
+        <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
     </span>
-</mat-toolbar>  
+</mat-toolbar>   
 
 <mat-card style="margin-top: 80px;margin-left: 25%;margin-right: 35%;">
     <mat-card-header >
