--- a/ServisiFront/src/app/components/userComponent/agent/statistika/statistika.component.html
+++ b/ServisiFront/src/app/components/userComponent/agent/statistika/statistika.component.html
@@ -3,6 +3,8 @@
     <span class="nav-tool-items">
         <a mat-button mat-raised-button routerLink="/agent/izvestaj" routerLinkActive="active">Unesi Izvestaj</a>
         <a mat-button mat-raised-button routerLink="/agent/zahtev" routerLinkActive="active">Zahtevi</a>
+        <a mat-button mat-raised-button routerLink="/vozilo/novoVozilo" routerLinkActive="active" >Novo vozilo</a>
+        <a mat-button mat-raised-button routerLink="/agent/oglas" routerLinkActive="active" >Novi oglas</a>
         <a mat-button mat-raised-button routerLink="/agent/vozila" routerLinkActive="active">Moja Vozila</a>
         <a mat-button mat-raised-button routerLink="/agent/statistika" routerLinkActive="active">statistika</a>
         <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
