--- a/ServisiFront/src/app/components/userComponent/agent/zahtevi/zahtevi.component.html
+++ b/ServisiFront/src/app/components/userComponent/agent/zahtevi/zahtevi.component.html
@@ -3,6 +3,8 @@
     <span class="nav-tool-items">
         <a mat-button mat-raised-button routerLink="/agent/izvestaj" routerLinkActive="active">Unesi Izvestaj</a>
         <a mat-button mat-raised-button routerLink="/agent/zahtev" routerLinkActive="active">Zahtevi</a>
+        <a mat-button mat-raised-button routerLink="/vozilo/novoVozilo" routerLinkActive="active" >Novo vozilo</a>
+        <a mat-button mat-raised-button routerLink="/agent/oglas" routerLinkActive="active" >Novi oglas</a>
         <a mat-button mat-raised-button routerLink="/agent/vozila" routerLinkActive="active">Moja Vozila</a>
         <a mat-button mat-raised-button routerLink="/agent/statistika" routerLinkActive="active">statistika</a>
         <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
@@ -24,11 +26,17 @@
             </mat-card-header>
             <mat-card-content >
                 <div *ngFor="let zahtev of data.bundleZahtevi" style="height: 100%;;border-style: outset; background-color:rgb(198, 192, 233);">
-                    <p> <span style="padding-right: 10px;">Sifra vozila:</span> {{zahtev.oglas.vozilo.id}} </p>
-                    <p> <span style="padding-right: 10px;">Marka vozila:</span> {{zahtev.oglas.vozilo.markaVozila}} </p>
-                    <p> <span style="padding-right: 10px;">Model vozila:</span> {{zahtev.oglas.vozilo.modelVozila}} </p>
-                    <p> <span style="padding-right: 10px;">Preuzimanje:</span> {{zahtev.preuzimanje}} </p>
-                    <p> <span style="padding-left: 20px; padding-right: 10px;">Povratak:</span> {{zahtev.povratak}} </p>
+                    <div style="border-style: solid;">
+                        <p> <span style="padding-right: 10px;">Oglas Vazi od:</span> {{zahtev.oglas.slobodanOd}} </p>
+                        <p> <span style="padding-right: 10px;">Oglas Vazi do:</span> {{zahtev.oglas.slobodanDo}} </p>
+                    </div>
+                    <div>
+                        <p> <span style="padding-right: 10px;">Sifra vozila:</span> {{zahtev.oglas.vozilo.id}} </p>
+                        <p> <span style="padding-right: 10px;">Marka vozila:</span> {{zahtev.oglas.vozilo.markaVozila}} </p>
+                        <p> <span style="padding-right: 10px;">Model vozila:</span> {{zahtev.oglas.vozilo.modelVozila}} </p>
+                        <p> <span style="padding-right: 10px;">Preuzimanje:</span> {{zahtev.preuzimanje}} </p>
+                        <p> <span style="padding-left: 20px; padding-right: 10px;">Povratak:</span> {{zahtev.povratak}} </p>
+                    </div>
                 </div>
             </mat-card-content>
             <mat-card-actions>
