Registrovanje agenta i firme

--- a/AgentAppFront/src/app/components/register/register.component.html
+++ b/AgentAppFront/src/app/components/register/register.component.html
@@ -87,7 +87,7 @@
         </tr>
       </table>
 
-      <span *ngIf="dataInvalid" style="font-size: 15px; position: relative; top: -15px; color: red;">Pogresan email ili
+      <span *ngIf="dataInvalid" style="font-size: 15px; position: relative; top: -15px; color: red;">Pogresan username ili
         lozinka</span>
       <button mat-stroked-button class="btn-block" type="submit">Potvrdi</button>
 
