Sredjivanje izgleda za kreiranje zahteva

--- a/ServisiFront/src/app/components/userComponent/user/my-shop-cart-items/my-shop-cart-items.component.html
+++ b/ServisiFront/src/app/components/userComponent/user/my-shop-cart-items/my-shop-cart-items.component.html
@@ -6,7 +6,7 @@
     </span>
 </mat-toolbar>
 
-<mat-card class="card-container" style="width: 1000px; height: 800; padding-top: 100px; margin-left: 400px;">
+<mat-card class="card-container" style="width: 1000px; height: 800; padding-top: 100px; margin-left: 300px;">
 
     <mat-card-header>
         <h3>Shopping Cart</h3>
@@ -20,7 +20,7 @@
                         <div>
                             <div style="float: left;">
                                 <div style="float: left;">
-                                    Vlasnik: {{zahtev.oglas.vozilo.user.firstname}}
+                                    Vlasnik: {{zahtev.oglas.vozilo.user.ime}}
                                 </div>
                                 <div style="float: right; padding-left: 100px;">
                                     Preuzimanje: {{zahtev.preuzimanje}}
