--- a/ServisiFront/src/app/components/userComponent/agent/agent.component.html
+++ b/ServisiFront/src/app/components/userComponent/agent/agent.component.html
@@ -6,6 +6,7 @@
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onVozilo()">Novo vozilo</a>
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOglas()">Novi oglas</a>
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onMojaVozila()">Moja vozila</a>
+      <a mat-button mat-raised-button routerLink="/zahteviMess" routerLinkActive="active" (click)="zahteviMess()">Poruke</a>
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
     </span>
   </mat-toolbar>  
