Blokiranje korisnika plus prepravka poruka

--- a/AgentAppFront/src/app/components/userComponent/administrator/administrator.component.html
+++ b/AgentAppFront/src/app/components/userComponent/administrator/administrator.component.html
@@ -42,6 +42,8 @@
       Liste
     </button>
     <mat-menu #menu2="matMenu">
+      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/korisnici">Korisnici</a>
+
       <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaMarkiVozila">Lista Marke Vozila</a>
     
       <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/listaKlasaVozila">Lista Klase Vozila</a>
