--- a/ServisiFront/src/app/components/userComponent/agent/agent.component.html
+++ b/ServisiFront/src/app/components/userComponent/agent/agent.component.html
@@ -6,6 +6,7 @@
       <a mat-button mat-raised-button routerLink="/vozilo/novoVozilo" routerLinkActive="active" >Novo vozilo</a>
       <a mat-button mat-raised-button routerLink="/agent/oglas" routerLinkActive="active" >Novi oglas</a>
       <a mat-button mat-raised-button routerLink="/agent/vozila" routerLinkActive="active">Moja Vozila</a>
+      <a mat-button mat-raised-button routerLink="/zahteviMess" routerLinkActive="active" (click)="zahteviMess()">Poruke</a>
       <a mat-button mat-raised-button routerLink="/agent/statistika" routerLinkActive="active">statistika</a>
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
     </span>
