Registracija agenta i firme na servisima odradjena

--- a/ServisiFront/src/app/components/userComponent/administrator/administrator.component.css
+++ b/ServisiFront/src/app/components/userComponent/administrator/administrator.component.css
@@ -9,6 +9,13 @@
     margin:30px;
   }
 
+  .dugmeRegistruj{
+    
+    background-color:lightpink;
+    color:black;
+    margin:30px;
+  
+  }
   
   .dugmeLista {
     background-color:#87b8cf;
