--- a/ServisiFront/src/app/components/userComponent/administrator/administrator.component.html
+++ b/ServisiFront/src/app/components/userComponent/administrator/administrator.component.html
@@ -1,7 +1,21 @@
 <mat-toolbar color="primary" class="app-header">
     <div><a href="/" class="navlogo">Rent-A-Car Administrator</a></div>
     <span class="nav-tool-items">
-<span>
+
+   
+      <button class="dugmeRegistruj"  mat-button [matMenuTriggerFor]="menu3">
+        <mat-icon>admin_panel_settings</mat-icon>
+        Registrovanje
+      </button>
+      <mat-menu #menu3="matMenu">
+        <a mat-button mat-raised-button  routerLinkActive="active" class="dugmeRegAgenta" (click)="openDialogRegAgenta()"><mat-icon>perm_identity</mat-icon>Registruj agenta</a>
+        <a mat-button mat-raised-button  routerLinkActive="active" class="dugmeRegAgenta" (click)="openDialogRegFirme()"><mat-icon>apartment</mat-icon>Registruj firmu</a>
+      </mat-menu>
+  
+  
+  
+  
+  <span>
      
 
       <button class="dugmeKreiraj"  mat-button [matMenuTriggerFor]="menu1">Kreiraj entitet</button>
